--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ buildscript {
             name "aliyun2"
             url 'http://maven.aliyun.com/mvn/repository/'
         }
+        maven {
+            name "spring milestone"
+            url "https://repo.spring.io/milestone/"
+        }
         mavenCentral()
     }
     dependencies {
@@ -28,6 +32,17 @@ group = 'com.yuuyoo.starter'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+ext {
+    springCloudVersion = 'Finchley.RC1'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+
 repositories {
     mavenLocal()
     maven {
@@ -38,6 +53,10 @@ repositories {
         name "aliyun2"
         url 'http://maven.aliyun.com/mvn/repository/'
     }
+    maven {
+        name "spring milestone"
+        url "https://repo.spring.io/milestone/"
+    }
     mavenCentral()
 }
 
@@ -46,6 +65,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-redis')
+    compile('org.springframework.cloud:spring-cloud-starter-openfeign')
     compile('org.apache.commons:commons-lang3:3.5')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
