--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+validate.ribbon.listOfServers=localhost:8011
+
 validate.image.url=/image/*,/test/*
 validate.sms.url=/sms/*
 validate.email.url=/email/*
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+
+validate.save.enable = false
